--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,16 @@
     display: flex;
   }
 
-#locationData article {
+#locationData table {
     flex: 1;
     border: 2px solid;
     border-radius: 10px;
+    text-align: center;
   
     margin: 10px;
     padding: 20px;
 }  
+
+th, td {
+  border: 1px solid black;
+}
